Fix - Spacing issue solved on pagination

--- a/themes/btemptd/assets/scss/website/layouts/_search.scss
+++ b/themes/btemptd/assets/scss/website/layouts/_search.scss
@@ -182,7 +182,9 @@
 }
 
 .search-pagination {
-  margin-top: 140px;
+  margin-top: 90px;
+  display: inline-block;
+  width: 100%;
 
   @include respond-below(sm) {
     margin-top: 65px;
